netpols/ccnp-cluster-dns-visibility.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: cluster-dns-visibility
spec:
  endpointSelector: {}
#    matchExpressions:
#    - key: k8s:io.kubernetes.pod.namespace
#      operator: NotIn
#      values:
#      - kube-system
  egress:
  # Allow all egress traffic to not break stuff. Remove for zero trust approach on the cluster!
  - toEntities:
    - all
  # Allow DNS to coredns and matchPattern to activate DNS visibility
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: ANY
      rules:
        dns:
        - matchPattern: "*"
