netpols/ccnp-cluster-http-visibility.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: cluster-http-visibility
spec:
  endpointSelector: {}
#    matchExpressions:
#    - key: k8s:io.kubernetes.pod.namespace
#      operator: NotIn
#      values:
#      - kube-system
  ingress:
  # Allow all ingress traffic to not break stuff. Remove for zero trust approach on the cluster!
  - fromEntities:
    - all
  - toPorts:
    - ports:
      - port: "80"
        protocol: "TCP"
      - port: "8080"
        protocol: "TCP"
      - port: "9080"
        protocol: "TCP"
      - port: "9200"
        protocol: "TCP"
      rules:
        http:
        - {}
