netpols/ccnp-host-all.yaml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: host-all
spec:
  description: Cilium host policy for all nodes
  nodeSelector: {}
  ingress:
  # System management: ALlow SSH access from jumphost
  - fromCIDR:
    - 10.1.101.110/32
    toPorts:
    - ports:
      - port: "22"
        protocol: TCP
  # System monitoring: Allow ping to hosts (also required by Cilium control plane agent ICMP health checks)
  - icmps:
    - fields:
      - type: 8
        family: IPv4
  # KAPI Control plane connectivity for Kubelet Pod log streaming
  - fromEntities:
    - kube-apiserver
    toPorts:
    - ports:
      - port: "10250"
        protocol: TCP
  # Cilium control plane agent HTTP health checks
  - fromEntities:
    - remote-node
    toPorts:
    - ports:
      - port: "4240"
        protocol: TCP
  # Data plane inter-node connectivity
  - fromEntities:
    - host
    - remote-node
    toPorts:
    - ports:
        # Cilium VXLAN
      - port: "8472"
        protocol: UDP
        # Cilium WireGuard
      - port: "51871"
        protocol: UDP
  # Cilium Hubble relay access to Cilium agent Hubble peers
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:app.kubernetes.io/name: hubble-relay
    toPorts:
    - ports:
      - port: "4244"
        protocol: TCP
  # Allow Prometheus to scrape Kubelet from host network
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: monitoring
    toPorts:
    - ports:
      # Node-Exporter Prometheus metrics
      - port: "9100"
        protocol: TCP
      # cilium-agent Prometheus metrics
      - port: "9962"
        protocol: TCP
      # cilium-operator Prometheus metrics
      - port: "9963"
        protocol: TCP
      # cilium-envoy Prometheus metrics
      - port: "9964"
        protocol: TCP
      # Cilium Hubble Prometheus metrics
      - port: "9965"
        protocol: TCP
      # Kubelet Prometheus metrics
      - port: "10250"
        protocol: TCP
