netpols/ccnp-host-cp.yaml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: host-cp
spec:
  description: Cilium host policy set for CP nodes
  nodeSelector:
    matchLabels:
      node-role.kubernetes.io/control-plane: ""
  ingress:
  # Kubernetes control plane connectivity from everywhere. Pods won't reach it in the end because we will restrict egress traffic from namespaces by default via CNP.
  - toPorts:
    - ports:
        # Kubernetes API
      - port: "6443"
        protocol: TCP
  # ETCD control plane connectivity from nodes
  - fromEntities:
    - kube-apiserver
    toPorts:
      - ports:
          # etcd client port
        - port: "2379"
          protocol: TCP
          # etcd peer communication port
        - port: "2380"
          protocol: TCP
